# NSU-projects-CXX

./: README.md  operator.c
CreateFabricy/: AlwaysVoiceC.cpp  AlwaysVoiceC.h  BipolarDisorder.cpp  BipolarDisorder.h  CMakeCache.txt  CMakeLists.txt  CreateFabricy  GameStrategy.h  Makefile  StrategyFactory.cpp  StrategyFactory.h  StrategyFactoryRegistrations.h  StrategyObject.h  Voice.h  cmake_install.cmake  main.cpp
IntroLab/: CMakeLists.txt  main.cpp
IntroLab/dirModule1/: module1.cpp  module1.h
IntroLab/dirModule2/: module2.cpp  module2.h
IntroLab/dirModule3/: CMakeLists.txt  module3.h
Lab0/: README.md
Lab1/: BigInt.cpp  BigInt.h  CMakeLists.txt  README.md  test.cpp
Lab2/: CMakeCache.txt  CMakeLists.txt  EApplication.cpp  EApplication.h  Game.cpp  Game.h  GameMatrix.cpp  GameMatrix.h  Lab2  Lab2.sh  Makefile  README.md  cmake_install.cmake  configFile1.txt  fileMatrix.txt  main.cpp  matrix.txt
Lab2/ConfigFile/: COLLECTIVE_STRATEGY.txt  PERCENTAGE_CHOICE.txt
Lab2/GameController/: CMakeLists.txt  Game.cpp  Game.h
Lab2/GameMatrix/: GameMatrix.cpp  GameMatrix.h  Makefile  Voice.h  testGameMatrix.cpp
Lab2/GameMatrix/GameMatrix/: CMakeLists.txt  GameMatrix.cpp  cmake_install.cmake
Lab2/GameMode/: CMakeLists.txt  GameMode.h  Makefile  Mode.cpp  Mode.h  ModeDetailed.cpp  ModeDetailed.h  ModeFast.cpp  ModeFast.h  ModeTournament.cpp  ModeTournament.h  cmake_install.cmake  main.cpp
Lab2/GameMode/Mode/: Mode.h
Lab2/GameMode/ModeDetailed/: ModeDetailed.h
Lab2/GameMode/ModeFast/: ModeFast.h
Lab2/GameStrategies/: AlwaysVoiceC.cpp  AlwaysVoiceC.h  AlwaysVoiceD.cpp  AlwaysVoiceD.h  CMakeCache.txt  CMakeLists.txt  GameStrategy.h  Makefile  PercentageChoice.cpp  PercentageChoice.h  RandomVoice.cpp  RandomVoice.h  StrategyFactory.cpp  StrategyFactory.h  TotalViewOpponentsActions.cpp  TotalViewOpponentsActions.h  cmake_install.cmake
Lab2/GameStrategies/AlwaysVoiceD/: AlwaysVoiceD.h
Lab2/GameStrategies/CollectiveStrategy/: Factory.cpp  testCollectiveStrategy.cpp
Lab2/GameStrategies/GameStrategy/: GameStrategy.cpp
Lab2/GameStrategies/PercentageChoice/: PercentageChoice.h  testPercentageChoice.cpp
Lab2/GameStrategies/RandomVoice/: RandomVoice.h
Lab2/GameStrategies/StrategyFactory/: StrategyFactory.h
Lab2/GameStrategies/ViewOpponentsActions/: ViewOpponentsActions.cpp  testViewOpponentsActions.cpp
Lab2/InputParser/: CMakeCache.txt  CMakeLists.txt  InputParser.cpp  InputParser.h  Makefile  cmake_install.cmake
Lab2/Libraries/GameMatrix/: GameMatrix.h  Voice.h
Lab2/Libraries/GameMode/: CMakeLists.txt
Lab2/Libraries/GameMode/Mode/: Mode.cpp  Mode.h
Lab2/Libraries/GameMode/ModeDetailed/: ModeDetailed.h
Lab2/Libraries/GameStrategies/: CMakeLists.txt
Lab2/Libraries/GameStrategies/AlwaysVoiceC/: AlwaysVoiceC.cpp  AlwaysVoiceC.h
Lab2/Libraries/GameStrategies/AlwaysVoiceD/: AlwaysVoiceD.cpp  AlwaysVoiceD.h
Lab2/Libraries/GameStrategies/BipolarDisorder/: BipolarDisorder.cpp  BipolarDisorder.h  testBipolarDisorder.cpp
Lab2/Libraries/GameStrategies/CollectiveStrategy/: CollectiveStrategy.cpp  CollectiveStrategy.h  Factory.h
Lab2/Libraries/GameStrategies/GameStrategy/: GameStrategy.h
Lab2/Libraries/GameStrategies/PercentageChoice/: PercentageChoice.cpp  PercentageChoice.h
Lab2/Libraries/GameStrategies/RandomVoice/: RandomVoice.cpp  RandomVoice.h
Lab2/Libraries/InputParser/: InputParser.h
Lab2/Libraries/StrategyFactory/: CMakeLists.txt  Makefile  StrategyFactory.cpp  cmake_install.cmake
Lab2/Strategies/: AlwaysVoiceC.cpp  AlwaysVoiceC.h  AlwaysVoiceD.cpp  AlwaysVoiceD.h  RandomVoice.cpp  RandomVoice.h
Lab2/lib/GameMatrix/: GameMatrix.cpp
Lab2/lib/GameMode/ModeFast/: ModeFast.cpp
Lab2/lib/InputParser/: InputParser.h
Lab2/lib/StrategyFactory/: StrategyFactory.h  StrategyFactoryRegistrations.h
Lab2/matrix/: matrix.txt
Lab3/: CMakeCache.txt  CMakeLists.txt  IncludeLibs.h  Lab3  Lab3.sh  Makefile  README.md  SoundProcessor  cmake_install.cmake  main.cpp
Lab3/ConfigurationFile/: ConfigurationFile.cpp  ConfigurationFile.h
Lab3/ConfigurationFolder/: ConfigurationFile.txt
Lab3/Convertor/: BackGround.h  CMakeLists.txt  Convertor.cpp  Convertor.h  Mix.cpp  Mix.h  Mute.cpp  Mute.h  Quick.cpp  Quick.h
Lab3/Factory/: Factory.cpp  FactoryRegistration.h
Lab3/InputParser/: CMakeLists.txt  InputParser.cpp  InputParser.h  Makefile  cmake_install.cmake
Lab3/ParseCommandLine/: CMakeLists.txt  ParseCommandLine.cpp  ParseCommandLine.h  ParserRegistrations.h
Lab3/ServiceConvertorAndWAV/: ServiceBackgroundAndWAV.cpp  ServiceBackgroundAndWAV.h  ServiceInterfaceConvertorAndWAV.h  ServiceMixAndWAV.cpp  ServiceMixAndWAV.h  ServiceMuteAndWAV.cpp  ServiceMuteAndWAV.h  ServiceQuickAndWAV.cpp  ServiceQuickAndWAV.h
Lab3/SoundProcessor/: CMakeLists.txt  SoundProcessor.cpp  SoundProcessor.h
Lab3/WAV/: CMakeLists.txt  Makefile  ParametersWAVFile.h  WAV.cpp  WAV.h  cmake_install.cmake
Lab3/lib/ConfigurationFile/: CMakeLists.txt
Lab3/lib/Convertor/: Mute.h
Lab3/lib/Factory/: CMakeLists.txt  Factory.h
Lab3/lib/ServiceConvertorAndWAV/: CMakeLists.txt  ServiceInterfaceConvertorAndWAV.h  ServiceMixAndWAV.cpp  ServiceMuteAndWAV.cpp  ServiceQuickAndWAV.cpp  ServiceQuickAndWAV.h
Lab4/: CMakeLists.txt  README.md  main.cpp  test.cpp
Lab4/CSVParse/: CSVParse.cpp  CSVParse.h
Lab4/CSVParser/: CMakeLists.txt
Lab4/CSVParser/include/: CSVParser.h  ExceptionsParserCSV.h
Lab4/CSVParser/src/: CSVParser.cpp  ExceptionsParserCSV.cpp
Lab4/FolderCSV/: test.csv  test1.csv  test2.csv  test3.csv  testError.csv
Lab4/IncludeLibs/: CMakeLists.txt
Lab4/IncludeLibs/include/: IncludeLibs.h
Lab4/LazyIterator/: CMakeLists.txt
Lab4/LazyIterator/include/: LazyIterator.h
Lab4/ParserCommandLine/: CMakeLists.txt
Lab4/ParserCommandLine/include/: ParserCommandLine.h
Lab4/ParserCommandLine/src/: ParserCommandLine.cpp
Lab4/PrintTuple/: CMakeLists.txt
Lab4/PrintTuple/include/: PrintTuple.h
Lab4/PrintTuple/src/: LazyIterator.cpp
Lab4/libs/CSVParser/: CMakeLists.txt
Lab4/libs/IncludeLibs/: CMakeLists.txt
Lab4/libs/ParserCommandLine/: CMakeLists.txt
(+46 files in other folders)
