add_library(StrategyFactory STATIC StrategyFactory.h StrategyFactory.cpp)
#target_link_libraries(GameMode PUBLIC GameStrategies)
#target_include_directories(StrategyFactory PUBLIC ${CMAKE_SOURCE_DIR}/GameStrategies)
#
#target_link_directories(StrategyFactory PUBLIC ${CMAKE_BINARY_DIR}/GameStrategies)
